--- a/productos/css/Productos.css
+++ b/productos/css/Productos.css
@@ -1,3 +1,4 @@
+
 *{
     margin:0;
     padding: 0;
@@ -35,11 +36,11 @@ body{
 header {
     width: 100%;
     height: 600px;
-    background: #cecba7d3; 
+    background: #3E5151; 
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, hsla(66, 66%, 83%, 0.486), hsla(159, 20%, 51%, 0.493)), url(../../../fotografias/Pasteles1.jpeg);  
+    background: -webkit-linear-gradient(to right, hsla(39, 48%, 76%, 0.486), hsla(180, 13%, 28%, 0.493)), url(../../fotografias/Pasteles1.jpeg);  
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(66, 66%, 83%, 0.486), hsla(159, 20%, 51%, 0.493)), url(../../../fotografias/Pasteles1.jpeg); 
+    background: linear-gradient(to right, hsla(39, 48%, 76%, 0.493), hsla(180, 13%, 28%, 0.5)), url(../../fotografias/Pasteles1.jpeg); 
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-attachment: fixed;
@@ -82,4 +83,54 @@ header .textos-header{
     color: #000000;
     padding: 30px 0 0px 0;
 }
+
+h3{
+   
+    font-family: 'Baskerville';
+    font-size: 8vh;
+    font-weight: 300;
+    color:hsl(33, 34%, 45%);
+    line-height: 1.3em;
+}
+
+h4{
+    font-family: 'Baskerville';
+    font-size: 8vh;
+    font-weight: 300;
+    color:hsl(33, 34%, 45%);
+    line-height: 1.3em;
+}
+
+h5{
+    
+    font-family: 'Baskerville';
+    font-size: 8vh;
+    font-weight: 300;
+    color:hsl(33, 34%, 45%);
+    line-height: 1.3em;
+}
+
+
+.contenido{
+    display:flex;
+    justify-content: space-around;
+   padding: auto;
+   align-items: flex-start;
+   margin: 10vh;
+}
+
+.producto{
+ width: 20%;
+
+}
+
+.producto >img {
+    width:100%;
+}
+
+main{
+    text-align: center;
+    margin: 5vh;
+}
+
 
