--- a/framework/assets/css/docs.css
+++ b/framework/assets/css/docs.css
@@ -82,6 +82,94 @@ header .textos-header{
     color: #000000;
     padding: 30px 0 0px 0;
 }
+/* productos destacados */
+
+.featured_products.product-slider {
+    padding-bottom: 0;
+}
+div.container {
+    margin: 0 auto;
+    padding: 20px 0;
+}
+.container {
+    position: relative;
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0;
+}
+* {
+    -moz-box-sizing: border-box;
+    /* -webkit-box-sizing: border-box; */
+    /* box-sizing: border-box; */
+}
+user agent stylesheet
+div {
+    display: block;
+}
+.notificationPreview-box *, ::after, ::before {
+    /* box-sizing: border-box; */
+}
+.container:after {
+    content: "\0020";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+.notificationPreview-box *, ::after, ::before {
+    /* box-sizing: border-box; */
+}
+::selection {
+    background: #fff7b6;
+    color: #000;
+}
+
+.featured_products.product-slider .columns {
+    padding-bottom: 0;
+}
+.container .sixteen.columns {
+    width: 1180px;
+}
+.column, .columns {
+    float: left;
+    display: inline;
+    margin-left: 10px;
+    margin-right: 10px;
+    box-sizing: content-box;
+}
+.center {
+    text-align: center;
+}
+* {
+    -moz-box-sizing: border-box;
+    /* -webkit-box-sizing: border-box; */
+    /* box-sizing: border-box; */
+}
+user agent stylesheet
+div {
+    display: block;
+}
+.notificationPreview-box *, ::after, ::before {
+    /* box-sizing: border-box; */
+}
+.notificationPreview-box *, ::after, ::before {
+    /* box-sizing: border-box; */
+}
+::selection {
+    background: #fff7b6;
+    color: #000;
+}
+
+element.style {
+    max-width: 800px;
+}
+
+
+
+
+
+
+
 
 /* footer */
 
