--- a/framework/assets/css/docs.css
+++ b/framework/assets/css/docs.css
@@ -14,7 +14,7 @@ body{
     width: 90%;
     max-width: 1000px;
     margin: auto;
-    overflow: hidden;
+    overflow: hidden; 
 }
 
 .titulo{
@@ -30,25 +30,26 @@ body{
     justify-content: flex-end;
 }
 
+
 /* Header */
 
 header {
+    background: #C9D6FF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #e2e2e270, #c9d6ff7c)url(../../../fotografias/header1.jpeg);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #e2e2e270, #c9d6ff85), url(../../../fotografias/header1.jpeg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-attachment: fixed;
+    background-size: cover;
+    position: relative;
     width: 100%;
     height: 600px;
-    background: #cecba7d3; 
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, hsla(66, 66%, 83%, 0.486), hsla(159, 20%, 51%, 0.493)), url(../../../fotografias/Pasteles1.jpeg);  
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(66, 66%, 83%, 0.486), hsla(159, 20%, 51%, 0.493)), url(../../../fotografias/Pasteles1.jpeg); 
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: cover;
-    background-attachment: fixed;
-    position: relative;
 }
+
 
 nav{
     text-align: right;
-    padding: 30px 50px 0 0;
+    padding: 5vh, 5vh 0 0;
+    font-family: 'lato';
+
 }
 
 nav > a{
@@ -56,6 +57,7 @@ nav > a{
     font-weight: 300;
     text-decoration: none;
     margin-right: 10px;
+    padding: 1vh ;
 }
 
 nav > a:hover{
@@ -73,15 +75,21 @@ header .textos-header{
 }
 
 .textos-header h1{
-    font-size: 50px;
+    font-size: 10vh;
     color:#000000;
+    font-family: 'Baskerville';
 }
 
 .textos-header h2{
+
     font-size: 20px;
-    color: #000000;
+    color: #69645c;
     padding: 30px 0 0px 0;
-}
+    font-family: 'lato';
+ }
+
+
+
 /* productos destacados */
 
 .featured_products.product-slider {
@@ -163,12 +171,6 @@ div {
 element.style {
     max-width: 800px;
 }
-
-
-
-
-
-
 
 
 /* footer */
