--- a/framework/assets/css/docs.css
+++ b/framework/assets/css/docs.css
@@ -7,6 +7,7 @@
 body{
     font-family: 'Baskerville';
     font-family: 'lato';
+    background-color: #f7f4f0;
 }
 
 .contenedor{
@@ -176,7 +177,7 @@ element.style {
 /* footer */
 
 footer{
-    background: #414141;
+    background: #dee6df;
     padding: 60px 0 30px 0;
     margin: auto;
     overflow: hidden;
@@ -196,14 +197,14 @@ footer{
 }
 
 .content-foo h4{
-    color: #fff;
+    color: black;
     border-bottom: 3px solid #b99e00;
     padding-bottom: 5px;
     margin-bottom: 10px;
 }
 
 .content-foo p{
-    color: #ccc;
+    color: black;
 }
 
 .titulo-final{
