--- a/productos/css/Productos.css
+++ b/productos/css/Productos.css
@@ -136,7 +136,7 @@ main{
 /* footer */
 
 footer{
-    background: #414141;
+    background: #daae96;
     padding: 60px 0 30px 0;
     margin: auto;
     overflow: hidden;
