--- a/framework/assets/css/docs.css
+++ b/framework/assets/css/docs.css
@@ -92,6 +92,7 @@ header .textos-header{
 
 
 /* productos destacados */
+/* productos destacados */ 
 
 .featured_products.product-slider {
     padding-bottom: 0;
