--- a/productos/css/Productos.css
+++ b/productos/css/Productos.css
@@ -5,44 +5,21 @@
     box-sizing: border-box;
 }
 
-
 body{
     font-family: 'Baskerville';
     font-family: 'lato';
 }
 
-.contenedor{
-    padding: 60px 0;
-    width: 90%;
-    max-width: 1000px;
-    margin: auto;
-    overflow: hidden;
-}
-
-.titulo{
-    color: #000000;
-    font-size: 30px;
-    text-align: center;
-    margin-bottom: 60px;
-    padding: 30px 0 0px 0;
-}
-
-.site-navigation{
-    display: flex;
-    justify-content: flex-end;
-}
-
 /* Header */
-
 header {
-    width: 100%;
-    height: 600px;
- background: #C9D6FF;  
- background: -webkit-linear-gradient(to right, #e2e2e285, #c9d6ff7e), url(../../fotografias/header3.jpg) ;  
-   background: linear-gradient(to right, #e2e2e286, #c9d6ff7e), url(../../fotografias/header3.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    position: relative;
+width: 100%;
+height: 600px;
+background: #C9D6FF;  
+background: -webkit-linear-gradient(to right, #e2e2e285, #c9d6ff7e), url(../../fotografias/header3.jpg) ;  
+background: linear-gradient(to right, #e2e2e286, #c9d6ff7e), url(../../fotografias/header3.jpg);
+background-size: cover;
+background-attachment: fixed;
+position: relative;
 }
 
 nav{
@@ -90,9 +67,10 @@ header .textos-header{
 
 
 
+
 /*titulos productos*/
 h3{
-   
+
     font-family: 'Baskerville';
     font-size: 8vh;
     font-weight: 300;
@@ -132,11 +110,30 @@ main{
 }
 
 
+/*Productos*/
+ .contenedor{
+ padding: 60px 0;
+width: 90%;
+max-width: 1000px;
+margin: auto;
+overflow: hidden;
+}
+                                            
+.titulo{
+color: #000000;
+font-size: 30px;
+text-align: center;
+margin-bottom: 60px;
+padding: 30px 0 0px 0;
+justify-content: space-around;
+}
+
+                                            
 
 /* footer */
 
 footer{
-    background: #daae96;
+    background: #6d8388;
     padding: 60px 0 30px 0;
     margin: auto;
     overflow: hidden;
@@ -148,7 +145,7 @@ footer{
     justify-content: space-evenly;
     margin: auto;
     padding-bottom: 50px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #eaeaea;
 }
 
 .content-foo{
@@ -156,20 +153,21 @@ footer{
 }
 
 .content-foo h4{
-    color: #fff;
-    border-bottom: 3px solid #b99e00;
+    color: black;
+    font-size: 18px;
+    border-bottom: 3px solid #eaeaea;
     padding-bottom: 5px;
     margin-bottom: 10px;
 }
 
 .content-foo p{
-    color: #ccc;
+    color: black;
 }
 
 .titulo-final{
     text-align: center;
     font-size: 14px;
     margin: 20px 0 0 0;
-    color: #9e9797;
+    color: #eaeaea;
 }
 
