--- a/contacto/css/Contacto.css
+++ b/contacto/css/Contacto.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 /* Header */
 
 header {
@@ -60,7 +61,61 @@ header .textos-header{
     padding: 30px 0 0px 0;
     font-family: 'lato';
  }
+ /*body*/
+ body{
+    font-family: 'Baskerville';
+    font-family: 'lato';
+    background-color: #f7f4f0;
+}
 
+
+ /*formulario de contacto*/
+ h3{
+font-size: 40px;
+text-align: center;
+padding: 10px 10px;
+font-family:  'Baskerville';
+ }
+.texto{
+    padding: 20px 0;
+    text-align: center;
+}
+.horario{
+    padding: 0 0 20px 0;
+    text-align: center;
+}
+
+ form{
+    width: 450px;
+    margin: auto;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    border-radius: 7px;
+}
+input{
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 20px;
+    border: none;
+}
+textarea{
+    max-width: 100%;
+    min-width: 100%;
+    min-height: 300px;
+    max-height: 800px;
+    
+}
+#boton{
+    background: rgba(206, 169, 135, 0.945);
+    color: black;
+    padding: 20px;
+}
+#boton:hover{
+    background-color: moccasin ;
+    cursor: pointer;
+}
 
 
 /* footer */
