--- a/framework/assets/css/docs.css
+++ b/framework/assets/css/docs.css
@@ -92,11 +92,17 @@ header .textos-header{
 
  
 /* productos destacados */ 
+h3{
+    color: 373838;
+    font-size: 100px;
+    font-family: 'Baskerville';
+}
 .slider-frame {
     width: 800px;
     height: auto;
     margin:50px auto 0;
     overflow: hidden;
+    padding: 0px 0px 60px 0px;
 }
 
 .slider-frame ul {
@@ -133,7 +139,7 @@ header .textos-header{
 /* footer */
 
 footer{
-    background: #6d8388;
+    background: #b2c9b5;
     padding: 60px 0 30px 0;
     margin: auto;
     overflow: hidden;
@@ -153,7 +159,7 @@ footer{
 }
 
 .content-foo h4{
-    color: black;
+    color: #373838 ;
     font-size: 18px;
     border-bottom: 3px solid #eaeaea;
     padding-bottom: 5px;
@@ -161,12 +167,12 @@ footer{
 }
 
 .content-foo p{
-    color: black;
+    color: #373838 ;
 }
 
 .titulo-final{
     text-align: center;
     font-size: 14px;
     margin: 20px 0 0 0;
-    color: #eaeaea;
+    color: #f7f4f0;
 }
