--- a/productos/css/Productos.css
+++ b/productos/css/Productos.css
@@ -8,7 +8,9 @@
 body{
     font-family: 'Baskerville';
     font-family: 'lato';
+    background-color: #f7f4f0;
 }
+
 
 /* Header */
 header {
@@ -74,7 +76,7 @@ h3{
     font-family: 'Baskerville';
     font-size: 8vh;
     font-weight: 300;
-    color:hsl(33, 34%, 45%);
+    color: #373838;
     line-height: 1.3em;
 }
 
@@ -82,7 +84,7 @@ h4{
     font-family: 'Baskerville';
     font-size: 8vh;
     font-weight: 300;
-    color:hsl(33, 34%, 45%);
+    color: #373838;
     line-height: 1.3em;
 }
 
@@ -120,7 +122,7 @@ overflow: hidden;
 }
                                             
 .titulo{
-color: #000000;
+color: #373838;
 font-size: 30px;
 text-align: center;
 margin-bottom: 60px;
@@ -133,7 +135,7 @@ justify-content: space-around;
 /* footer */
 
 footer{
-    background: #6d8388;
+    background: #b2c9b5;
     padding: 60px 0 30px 0;
     margin: auto;
     overflow: hidden;
@@ -153,7 +155,7 @@ footer{
 }
 
 .content-foo h4{
-    color: black;
+    color: #373838 ;
     font-size: 18px;
     border-bottom: 3px solid #eaeaea;
     padding-bottom: 5px;
@@ -161,13 +163,13 @@ footer{
 }
 
 .content-foo p{
-    color: black;
+    color: #373838 ;
 }
 
 .titulo-final{
     text-align: center;
     font-size: 14px;
     margin: 20px 0 0 0;
-    color: #eaeaea;
+    color: #f7f4f0;
 }
 
