--- a/quienes somos/css/Quienes somos.css
+++ b/quienes somos/css/Quienes somos.css
@@ -4,14 +4,20 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Baskerville';
+    font-family: 'lato';
+    background-color: #f7f4f0;
+}
+
 
 /* Header */
 
 header {
     width: 100%;
     height: 600px;
- background: #C9D6FF;  
- background: -webkit-linear-gradient(to right, #e2e2e285, #c9d6ff7e), url(../../fotografias/header2.jpg) ;  
+    background: #C9D6FF;  
+   background: -webkit-linear-gradient(to right, #e2e2e285, #c9d6ff7e), url(../../fotografias/header2.jpg) ;  
    background: linear-gradient(to right, #e2e2e286, #c9d6ff7e), url(../../fotografias/header2.jpg);
     background-size: cover;
     background-attachment: fixed;
@@ -63,11 +69,68 @@ header .textos-header{
  }
 
 
+/*main*/
+img{
+    width: 70%;
+    max-width: 1000px;
+    margin: auto;
+    overflow: hidden;
+}
+.presentacion{
+    color: #373838;
+    max-width: 700px;
+    text-align: center;
+    padding: 0px 0 80px 0;
+    font-size: 20px;
+    font-family: 'lato';
+}
+
+.cards{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0px 0 40px 0;
+}
+
+.cards .card{
+    background: #daae96;
+    display: flex;
+    width: 30%;
+    height: 220px;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 5px;
+    box-shadow: 0 0 6px 0 rgba(0, 0 ,0, 0.6);
+}
+.cards .card img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    display: block;
+}
+
+.cards .card > .contenido-texto-card{
+    width: 60%;
+    color: #fff;
+    font-family: 'Baskerville';
+    font-size: 25px;
+}
+
+.cards .card .contenido-texto-card p{
+    font-weight: 300;
+    padding-top: 5px;
+    font-family: 'lato';
+    font-size: 20px;
+    
+}
+
+
 
    /* footer */
 
    footer{
-    background: #6d8388;
+    background: #b2c9b5;
     padding: 60px 0 30px 0;
     margin: auto;
     overflow: hidden;
@@ -87,7 +150,7 @@ header .textos-header{
 }
 
 .content-foo h4{
-    color: black;
+    color: #373838 ;
     font-size: 18px;
     border-bottom: 3px solid #eaeaea;
     padding-bottom: 5px;
@@ -95,12 +158,12 @@ header .textos-header{
 }
 
 .content-foo p{
-    color: black;
+    color: #373838 ;
 }
 
 .titulo-final{
     text-align: center;
     font-size: 14px;
     margin: 20px 0 0 0;
-    color: #eaeaea;
+    color: #f7f4f0;
 }
