--- a/framework/assets/css/docs.css
+++ b/framework/assets/css/docs.css
@@ -2,6 +2,41 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    
+}
+body{
+    font-family: 'Lato', sans-serif;
+    background-color: #f7f4f0;
+}
+
+nav{
+    height: 30px;
+    width: 100%;
+}
+
+ /* telefono*/
+
+.top-header{
+    background: #6d8388;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    color: #fff;
+    display: block;
+    font-family: 'Lato', sans-serif;
+}
+
+.container{
+    font-family: 'Lato', sans-serif;
+   margin-left: 60px;
+
+}
+ .fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
 }
 
 body{
