--- a/productos/css/Productos.css
+++ b/productos/css/Productos.css
@@ -11,123 +11,209 @@ body{
     background-color: #f7f4f0;
 }
 
+/*barra de informacion*/
+
+
+.top-header{
+  background: #6d8388;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  color: #fff;
+  display: block;
+  font-family: 'Lato', sans-serif;
+}
+
+.containerr{
+  font-family: 'Lato', sans-serif;
+ margin-left:  10px;
+}
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
 
 /* Header */
 header {
-width: 100%;
-height: 600px;
 background: #C9D6FF;  
 background: -webkit-linear-gradient(to right, #e2e2e285, #c9d6ff7e), url(../../fotografias/header3.jpg) ;  
 background: linear-gradient(to right, #e2e2e286, #c9d6ff7e), url(../../fotografias/header3.jpg);
-background-size: cover;
 background-attachment: fixed;
+background-size: cover;
 position: relative;
+width: 100%;
+height: 600px;
 }
 
+
 nav{
-    text-align: right;
-    padding: 5vh, 5vh 0 0;
-    font-family: 'lato';
+text-align: right;
+padding: 5vh, 5vh 0 0;
+font-family: 'lato';
 
 }
 
 nav > a{
-    color:#000000;
-    font-weight: 300;
-    text-decoration: none;
-    margin-right: 10px;
-    padding: 1vh ;
+color:#000000;
+font-weight: 300;
+text-decoration: none;
+margin-right: 10px;
+padding: 1vh ;
 }
 
 nav > a:hover{
-    text-decoration: underline;
+text-decoration: underline;
 }
 
 header .textos-header{
-    display: flex;
-    height: 430px;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
+display: flex;
+height: 430px;
+width: 100%;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+text-align: center;
 }
 
 .textos-header h1{
-    font-size: 10vh;
-    color:#000000;
-    font-family: 'Baskerville';
+font-size: 10vh;
+color:#000000;
+font-family: 'Baskerville';
 }
 
 .textos-header h2{
 
-    font-size: 20px;
-    color: #69645c;
-    padding: 30px 0 0px 0;
-    font-family: 'lato';
+font-size: 20px;
+color: #373838 ;
+padding: 30px 0 0px 0;
+font-family: 'lato';
+}
+
+
+
+.main {
+  max-width: 1200px;
+  margin: 0 auto;
+  font-family: "Poppins", sans-serif;
+}
+/*Productos*/
+  .cards{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .cards_item {
+    display: flex;
+    padding: 1rem;
+  }
+.card {
+     background-color: white;
+     border-radius: 0.5rem;
+     box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+     display: flex;
+    flex-direction: column;
+    overflow: hidden;
+     position: relative;
+     height: fit-content;
+     padding: 0 0 2rem 0;
+     position: relative;
+}
+.card_text {
+ overflow: hidden;
+ max-height: 8rem;
+ -webkit-box-orient: vertical;
+ display: block;
+ display: -webkit-box;
+ overflow: hidden !important;
+ text-overflow: ellipsis;
+ -webkit-line-clamp: 4;
  }
 
+ .more {
+ transform: rotate(180deg);
+ }
 
-
-
-/*titulos productos*/
-h3{
-
-    font-family: 'Baskerville';
-    font-size: 8vh;
-    font-weight: 300;
-    color: #373838;
-    line-height: 1.3em;
+.card_image {
+ max-height: 250px;
+}
+.card_content {
+  padding: 1rem;
 }
 
-h4{
-    font-family: 'Baskerville';
-    font-size: 8vh;
-    font-weight: 300;
-    color: #373838;
-    line-height: 1.3em;
+.card_title {
+ margin: 0.5rem 0;
 }
 
-
-.contenido{
-    display:flex;
-    justify-content: space-around;
-   padding: auto;
-   align-items: flex-start;
-   margin: 10vh;
+.card_text {
+margin: 0;
 }
 
-.producto{
- width: 20%;
-
+.note {
+position: absolute;
+top: 1rem;
+right: 1rem;
+background: #ffffff95;
+font-weight: 600;
+border-radius: 0.1rem;
+padding: 0.1rem 0.5rem;
+text-transform: uppercase;
 }
 
-.producto >img {
-    width:100%;
-}
-
-main{
-    text-align: center;
-    margin: 5vh;
-}
-
-
-/*Productos*/
- .contenedor{
- padding: 60px 0;
-width: 90%;
-max-width: 1000px;
-margin: auto;
-overflow: hidden;
-}
-                                            
-.titulo{
-color: #373838;
-font-size: 30px;
+.more {
+cursor: pointer;
+position: absolute;
+bottom: 0.25rem;
+display:flex;
+width:100%;
+ align-items:center;
+justify-content:center;
 text-align: center;
-margin-bottom: 60px;
-padding: 30px 0 0px 0;
-justify-content: space-around;
+color: #555;
+}
+
+.md {
+  font-weight: 500;
+}
+
+@media (min-width: 40rem) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 56rem) {
+  .cards_item {
+    width: 33.3333%;
+  }
+}
+.material-icons {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.5rem; /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: "liga";
 }
 
                                             
