--- a/quienes somos/css/Quienes somos.css
+++ b/quienes somos/css/Quienes somos.css
@@ -10,6 +10,30 @@ body{
     background-color: #f7f4f0;
 }
 
+/*barra de informacion*/
+
+.top-header{
+    background: #6d8388;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    color: #fff;
+    display: block;
+    font-family: 'Lato', sans-serif;
+}
+
+.containerr{
+    font-family: 'Lato', sans-serif;
+   margin-left:  10px;
+
+}
+ .fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
 
 /* Header */
 
@@ -19,9 +43,11 @@ header {
     background: #C9D6FF;  
    background: -webkit-linear-gradient(to right, #e2e2e285, #c9d6ff7e), url(../../fotografias/header2.jpg) ;  
    background: linear-gradient(to right, #e2e2e286, #c9d6ff7e), url(../../fotografias/header2.jpg);
+   background-attachment: fixed;
     background-size: cover;
-    background-attachment: fixed;
     position: relative;
+    width: 100%;
+    height: 600px;
 }
 
 
@@ -63,10 +89,11 @@ header .textos-header{
 .textos-header h2{
 
     font-size: 20px;
-    color: #69645c;
+    color: #373838 ;
     padding: 30px 0 0px 0;
     font-family: 'lato';
  }
+
 
 
 /*main*/
