--- a/productos/css/Productos.css
+++ b/productos/css/Productos.css
@@ -92,13 +92,12 @@ padding: 30px 0 0px 0;
 font-family: 'lato';
 }
 
-
-
 .main {
   max-width: 1200px;
   margin: 0 auto;
   font-family: "Poppins", sans-serif;
 }
+
 /*Productos*/
   .cards{
     display: flex;
@@ -110,22 +109,21 @@ font-family: 'lato';
   .cards_item {
     display: flex;
     padding: 1rem;
+
   }
 .card {
      background-color: white;
      border-radius: 0.5rem;
      box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
      display: flex;
-    flex-direction: column;
-    overflow: hidden;
+     flex-direction: column;
+     overflow: hidden;
      position: relative;
-     height: fit-content;
      padding: 0 0 2rem 0;
      position: relative;
 }
 .card_text {
  overflow: hidden;
- max-height: 8rem;
  -webkit-box-orient: vertical;
  display: block;
  display: -webkit-box;
@@ -170,7 +168,7 @@ position: absolute;
 bottom: 0.25rem;
 display:flex;
 width:100%;
- align-items:center;
+align-items:center;
 justify-content:center;
 text-align: center;
 color: #555;
@@ -183,6 +181,7 @@ color: #555;
 @media (min-width: 40rem) {
   .cards_item {
     width: 50%;
+  
   }
 }
 
@@ -216,7 +215,25 @@ color: #555;
   font-feature-settings: "liga";
 }
 
-                                            
+
+/*boton confirmar*/
+
+button {
+	display: block;
+	padding: 1rem 1.5rem;
+	margin: 2rem 0;
+	color: black;
+	background: #fff;
+	border: 2px solid #000;
+	font-weight: bold;
+	border-radius: 2rem;
+	transition: all .15s linear;
+}
+button:hover {
+	background: #000;
+	color: white;
+	cursor: pointer;
+}                                         
 
 /* footer */
 
